--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,17 @@
 buildscript {
     ext{
         kotlin_version = "1.3.72"
-        nav_version = "2.3.0-beta01"
+        nav_version = "2.3.0"
         room_version = "2.2.5"
-        lifecycle_version = "2.3.0-alpha03"
-        coroutines_version = "1.3.7"
+        lifecycle_version = "2.3.0-alpha06"
+        coroutines_version = "1.3.8"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
